# approxMLIR

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  KEVIN_TASK.md  LOCAL_INTEGRATION_NOTES.md  README.md
.github/workflows/: build-and-test.yml
approx-opt/: CMakeLists.txt  approx-opt.cpp
approxMLIR-opt/: CMakeLists.txt  approxMLIR-opt.cpp
docs/: mlsys_30min_talk_script.md
external-tools/approx/: merge.py
external-tools/approx-triton-plugin/: CMakeLists.txt  README.md
external-tools/approx-triton-plugin/pass/: ApproxTritonPlugin.cpp  CMakeLists.txt  plugin.map
external-tools/approx-triton-plugin/test/: func_substitute.mlir
external-tools/iree-plugin/: CMakeLists.txt  iree.patch
include/: CMakeLists.txt
include/approx/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  approxOps.td
include/approx/Passes/: CMakeLists.txt  Passes.h  Passes.td
include/approxMLIR/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  approxMLIRDialect.td  approxMLIROps.h  approxMLIROps.td
include/approxMLIR/Passes/: CMakeLists.txt  Passes.h  Passes.td  Utils.h
iree-plugin/: PluginRegistration.cpp  iree.patch
lib/approx/: CMakeLists.txt  approxDialect.cpp  approxOps.cpp
lib/approx/Passes/: CMakeLists.txt  ConfigApprox.cpp  EmitApprox.cpp  EmitManagement.cpp  EmitSafety.cpp  FinalizeApprox.cpp  LegalizeToStablehlo.cpp  PassDetails.h  PreEmitTransformations.cpp  TransformApprox.cpp
lib/approxMLIR/: CMakeLists.txt  approxMLIRDialect.cpp  approxMLIROps.cpp
lib/approxMLIR/Passes/: CMakeLists.txt  ConfigApprox.cpp  ConvertSCFToApprox.cpp  EmitApprox.cpp  PassDetails.h  PreEmitTransformations.cpp  TransformApprox.cpp
runtime/: .gitignore  README.md  approxMLIR.h  approx_tuned_config.json  opentuner.db  pyproject.toml
runtime/approx_runtime/: __init__.py  annotate.py  compiler.py  cpp_annotation.py  cpp_pipeline.py  export.py  iree.py  knob.py  mlir_gen.py  toolchain.py  triton_compiler.py  triton_dump.py  triton_hook.py  tuner.py  tuner_config.py
runtime/benchmark/: example_bm25_tuning.py  example_choose_tuning.py  example_kmeans_tuning.py
runtime/benchmark/src/: approx_kmeans.c
runtime/examples/: approx_quant_api.py  example.py  example_lavamd_tuning.py  example_qwen_iree.py  example_triton_wo_tuning.py  example_w_tuning.py  example_wo_tuning.py  micro_d.py  micro_t.py  stage2a_qwen_model_demo.py  stage2c_qwen_inductor_demo.py
runtime/examples/benchmark/: .gitignore  benchmark_common.py  example_bm25_tuning.py  example_kb_tuning.py  example_kmeans_tuning.py  example_lavamd_tuning.py  example_pagerank_tuning.py
runtime/examples/benchmark/src/: approx_bm25.c  approx_choose.c  approx_kb.c  approx_kmeans.c  approx_lavaMD.c  approx_pagerank.c
runtime/examples/docs/: QUANTIZATION_APPROXMLIR_INTEGRATION_SPEC.md  QUANTIZATION_SPEC.md  SIDEPATHS.md  STAGE_MAP.md  qwen_iree_report.md
runtime/examples/kernels/: __init__.py  llm_like.py  quant_kernels.py
runtime/examples/sglang_quant/: README.md  approx_kernels.py  approx_quant_patch.py  approx_substitution_state.py  build_smoothquant_artifact.py  compare_sglang_logprobs.py  mixed_backend_config.py  probe_sglang_triton_dump.py  sweep_sglang_quant.py
runtime/examples/sglang_quant/bootstrap/: sitecustomize.py
runtime/examples/sidepaths/: dump_qwen_ttir.py  dump_triton_kernels.py  stage2a_fastpath_probe.py  stage2a_func_substitute_demo.py  stage2a_regime_characterizer.py  stage2c_validate_mlir_quant_path.py
runtime/tests/: test_annotate_api.py  test_compiler.py  test_cpp_annotation.py  test_cpp_pipeline.py  test_export.py  test_iree.py  test_knob.py  test_mlir_gen.py  test_skipping.py  test_toolchain.py  test_triton_hook.py  test_triton_passes_integration.py  test_tuner.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  substitute.py  test_substitute_mnist.py
test/Standalone/: dummy.mlir
test/approxMLIR/: base.mlir  base1.mlir  base2.mlir  base3.mlir  base4.mlir  base5.mlir  base6.mlir  dummy.mlir  loop.mlir  loop1.mlir  loop2.mlir  loopwithcontrol.mlir  merged.mlir  test_simplified_try.mlir
test/approxMLIR/benchmarks/bm25/: annotation.mlir  bm25  bm25.c
test/approxMLIR/benchmarks/choose/: annotation.mlir  choose.c
test/approxMLIR/benchmarks/kb/: annotation.mlir
test/approxMLIR/benchmarks/kmeans/: annotation.mlir  cluster.c  data.txt  kmeans.h  make_data  read_input.c
test/approxMLIR/benchmarks/lavaMD/: annotation.mlir  lavaMD.c  main.cpp  main.h  precise.cpp  result.txt
test/approxMLIR/benchmarks/leukocyte/: Makefile.approx  avilib.c  detect_main.c  kernel_IMGVF.h  track_ellipse.c  track_ellipse.h
test/approxMLIR/benchmarks/lulesh/: Makefile.approx  lulesh.cc
test/approxMLIR/benchmarks/miniFE/: Makefile.approx  SparseMatrix_functions.hpp  cg_solve.hpp  driver.hpp  main.cpp  make_targets
test/approxMLIR/benchmarks/pagerank/: annotation.mlir  pagerank.c
test/llm/: approxMLIR.py  jax_gemma3.py  jax_llm2.py  jax_llm3.py  jax_reflection.py  jax_tool.py
test/python/: README.md  approxMLIR.py  jax_bert.py  jax_llm.py  jax_llm2.py  jax_runtime.py  substitute.py  test_substitute_mnist.py  verification.py
test/runtime/: README.md  test_kernels.py
